refactor: replace iterative heap removal with heapsort method and optimize list removal operations